--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Welcome to my Website</h1>
+    <h1>Welcome to my web</h1>
     <h2>Welcome to my Website 2</h2>
     Hello World
 </body>
